[package]
name = "udp_tokio"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "client"
path = "src/client.rs"

[[bin]]
name = "server"
path = "src/server.rs"

[dependencies]
anyhow = "1.0.61"
tokio = { version = "1.20.1", features = ["net", "macros", "rt", "rt-multi-thread"] }
